# VERA

./: .env.example  .gitignore  .mcp.json  LICENSE  PLAN_VERA.md  PackageVERA.py  README.md  acf_history.txt  extract_acf.ps1  pyproject.toml  requirements.txt  test_heartbeat.py  vera.config.yaml
Plugin/: VERA.uplugin
Plugin/Source/VERA/: VERA.Build.cs
UE57/Content/Python/: epic_proxy.py  init_unreal.py  vera_bootstrap.py  vera_bridge.py  vera_history.py  vera_reload.py  vera_server_launcher.py  vera_ui.py
UE57/VERA_Plugins/blueprint-forge/: SKILL.md  plugin.json
UE57/VERA_Plugins/computer-use/: SKILL.md  plugin.json
UE57/VERA_Plugins/example-hello/: SKILL.md  plugin.json
UE57/VERA_Plugins/local-iq/: SKILL.md  plugin.json  recipes.jsonl
UE57/VERA_Plugins/memory/: SKILL.md  plugin.json
UE57/VERA_Plugins/mobile-perf-doctor/: SKILL.md  plugin.json
UE57/VERA_Plugins/pcg-forge/: SKILL.md  plugin.json
UE57/VERA_Plugins/project-intelligence/: SKILL.md  plugin.json
UE57/VERA_Plugins/project-playbook/: SKILL.md  plugin.json
UE57/VERA_Plugins/scene-vibe/: SKILL.md  plugin.json
UE57/VERA_Plugins/source-control/: SKILL.md  _git.py  plugin.json
UE58/: .mcp.json
UE58/TestMPC/: TestMPC.uproject  test_mcp.py
docs/: E2E_FASE3_HANDOFF.md  THIRD_PARTY_TPS.md  VERA_ACF_showcase.md  mcp-bridge.md  vera_chat_tips.md  vera_minigame_run_log.md
docs/superpowers/plans/: 2026-06-10-vera-mcp-bridge.md  2026-06-10-vera-ui-redesign.md  2026-06-11-vera-agentic-brain-fase1.md  2026-06-11-vera-agentic-brain-fase15-robustez.md  2026-06-12-vera-animation-phase1.md  2026-06-12-vera-animation-phase2-capture.md  2026-06-12-vera-animation-phase3-retarget.md
docs/superpowers/specs/: 2026-06-10-vera-mcp-bridge-design.md  2026-06-10-vera-ui-redesign-design.md  2026-06-11-vera-agentic-brain-design.md  (+4 more)
tests/: conftest.py  test_blackboard_progress.py  test_mcp_tools.py  test_ue_conn.py  test_ue_conn_stream.py  test_vera_bridge.py  test_vera_history.py  test_vera_server_multiprovider.py  test_vera_server_stream.py
tests/agent/: fakes.py  test_anim_scripts.py  test_animate_actor.py  test_capture_actor.py  test_capture_scripts.py  test_confirm_gate.py  test_ensure_ik_rig.py  test_ensure_retargeter.py  test_factory.py  test_factory_plugins.py  test_inspect_actor_animability.py  test_list_tool_specs.py  test_loop.py  test_make_llm_client.py  test_models.py  test_permission_modes.py  test_plugins.py  test_registry.py  test_retarget_animations.py  test_retarget_scripts.py  test_run_ue_python.py  test_session.py  test_tool.py
tests/llm/: fake_openai.py  test_openai_compat_client.py
vera/: __init__.py  cli.py  mcp_client.py  vera_graph_utils.py
vera/actions/: keyboard.py  mouse.py  ue_python.py
vera/agent/: __init__.py  factory.py  loop.py  models.py  plugins.py  registry.py  session.py  tool.py
vera/agent/tools/: __init__.py  (+11 more)
vera/cache/: action_cache.py  coord_registry.py
vera/core/: agent.py  blackboard.py  manager_agent.py  planner.py  state_machine.py  vera_server.py
vera/llm/: openai_compat_client.py
vera/perception/: ocr.py  screenshot.py  vision.py
vera/recipes/: android_setup.py
vera/tools/: mcp_server.py  ue_bridge_server.py  ue_conn.py
(+25 files in other folders)
