[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vera-ue"
version = "0.1.0"
description = "Visual Editor Reasoning Agent — Your AI co-pilot inside Unreal Engine 5"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["unreal-engine", "ai-agent", "automation", "computer-use", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "google-generativeai>=0.8.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vera = "vera.cli:cli"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/vera"
Repository = "https://github.com/YOUR_USERNAME/vera"
Issues = "https://github.com/YOUR_USERNAME/vera/issues"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
