[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vera-ue"
version = "0.1.0"
description = "Visual Editor Reasoning Agent — Your AI co-pilot inside Unreal Engine 5"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["unreal-engine", "ai-agent", "automation", "llm", "mcp", "agent-loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # LLM brain (AgentLoop): native Anthropic + an OpenAI-compatible adapter
    # (OpenAI proper, Gemini's OpenAI endpoint, and any local server: LM Studio,
    # Ollama, llama.cpp, vLLM, ...).
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    # MCP bridge (Claude Code / other MCP clients ↔ the editor).
    "mcp>=1.2.0",
    # CLI + .env loading.
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    # NOTE: the chat UI uses PySide6, auto-installed into Unreal's embedded Python
    # at first launch (it targets the engine interpreter, not this environment).
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vera = "vera.cli:cli"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/vera"
Repository = "https://github.com/YOUR_USERNAME/vera"
Issues = "https://github.com/YOUR_USERNAME/vera/issues"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
